--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
+      <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>A Thousand Suns Couldn't Match Her Warmth</title>
+  <title>A Thousand Suns Couldn't Match a Mother's Warmth</title>
   <style>
     body {
       margin: 0;
@@ -20,7 +20,7 @@
     }
 
     h1 {
-      font-size: 2.5em;
+      font-size: 3.5em;
       font-weight: 700;
       text-align: center;
       margin: 0 20px;
@@ -28,17 +28,17 @@
 
     p {
       font-family: 'Helvetica Neue', sans-serif;
-      font-size: 1em;
+      font-size: 1.5em;
       font-weight: 200;
       color: #B22222;
-      margin-top: 10px;
+      margin-top: 15px;
       text-align: center;
     }
 
     .button {
-      margin-top: 40px;
-      padding: 12px 30px;
-      font-size: 1em;
+      margin-top: 50px;
+      padding: 16px 40px;
+      font-size: 1.2em;
       color: white;
       background-color: #B22222;
       border: none;
@@ -64,30 +64,30 @@
 
     .heart {
       position: absolute;
-      width: 20px;
-      height: 20px;
+      width: 40px;
+      height: 40px;
       background: red;
       transform: rotate(45deg);
-      animation: float 10s infinite ease-in-out;
+      animation: float 12s infinite ease-in-out;
     }
 
     .heart::before,
     .heart::after {
       content: '';
       position: absolute;
-      width: 20px;
-      height: 20px;
+      width: 40px;
+      height: 40px;
       background: red;
       border-radius: 50%;
     }
 
     .heart::before {
-      top: -10px;
+      top: -20px;
       left: 0;
     }
 
     .heart::after {
-      left: -10px;
+      left: -20px;
       top: 0;
     }
 
@@ -105,13 +105,17 @@
       }
     }
 
-    /* Generate multiple hearts */
-    .heart:nth-child(1) { left: 10%; animation-delay: 0s; }
-    .heart:nth-child(2) { left: 25%; animation-delay: 2s; }
-    .heart:nth-child(3) { left: 40%; animation-delay: 4s; }
-    .heart:nth-child(4) { left: 60%; animation-delay: 1s; }
-    .heart:nth-child(5) { left: 75%; animation-delay: 3s; }
-    .heart:nth-child(6) { left: 90%; animation-delay: 5s; }
+    /* More hearts with various delays and positions */
+    .heart:nth-child(1) { left: 5%; animation-delay: 0s; }
+    .heart:nth-child(2) { left: 15%; animation-delay: 2s; }
+    .heart:nth-child(3) { left: 25%; animation-delay: 4s; }
+    .heart:nth-child(4) { left: 35%; animation-delay: 1s; }
+    .heart:nth-child(5) { left: 45%; animation-delay: 3s; }
+    .heart:nth-child(6) { left: 55%; animation-delay: 5s; }
+    .heart:nth-child(7) { left: 65%; animation-delay: 1.5s; }
+    .heart:nth-child(8) { left: 75%; animation-delay: 2.5s; }
+    .heart:nth-child(9) { left: 85%; animation-delay: 4.5s; }
+    .heart:nth-child(10) { left: 95%; animation-delay: 3.5s; }
   </style>
 </head>
 <body>
@@ -122,9 +126,13 @@
     <div class="heart"></div>
     <div class="heart"></div>
     <div class="heart"></div>
+    <div class="heart"></div>
+    <div class="heart"></div>
+    <div class="heart"></div>
+    <div class="heart"></div>
   </div>
 
-  <h1>A Thousand Suns Couldn't Match Her Warmth</h1>
+  <h1>A Thousand Suns Couldn't Match a Mother's Warmth</h1>
   <p>A Mother's Day digital surprise to Ms. Dessie L. Yabo</p>
 
   <a href="next.html"><button class="button">Begin the Journey</button></a>
