--- a/index.html
+++ b/index.html
@@ -7,49 +7,52 @@
     body {
       margin: 0;
       padding: 0;
+      background: #B22222; /* Red background */
       font-family: 'Georgia', serif;
-      background: white;
       overflow: hidden;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
       height: 100vh;
-      color: #8B0000;
+      color: #fff;
       position: relative;
     }
 
     h1 {
-      font-size: 3.5em;
-      font-weight: 700;
+      font-size: 7em;
+      font-weight: bold;
       text-align: center;
+      color: #FFFFE0; /* Light yellow */
       margin: 0 20px;
+      z-index: 1;
     }
 
     p {
       font-family: 'Helvetica Neue', sans-serif;
-      font-size: 1.5em;
+      font-size: 3em;
       font-weight: 200;
-      color: #B22222;
-      margin-top: 15px;
+      color: #fff;
+      margin-top: 20px;
       text-align: center;
+      z-index: 1;
     }
 
     .button {
-      margin-top: 50px;
-      padding: 16px 40px;
-      font-size: 1.2em;
-      color: white;
-      background-color: #B22222;
+      margin-top: 60px;
+      padding: 20px 50px;
+      font-size: 2em;
+      color: #B22222;
+      background-color: #FFFFE0;
       border: none;
-      border-radius: 30px;
+      border-radius: 40px;
       cursor: pointer;
       transition: background 0.3s ease;
       z-index: 1;
     }
 
     .button:hover {
-      background-color: #8B0000;
+      background-color: #fff8b3;
     }
 
     .hearts {
@@ -66,9 +69,10 @@
       position: absolute;
       width: 40px;
       height: 40px;
-      background: red;
+      background: #FFFFE0; /* Light yellow hearts */
       transform: rotate(45deg);
-      animation: float 12s infinite ease-in-out;
+      animation: float 10s infinite ease-in-out;
+      opacity: 0.7;
     }
 
     .heart::before,
@@ -77,7 +81,7 @@
       position: absolute;
       width: 40px;
       height: 40px;
-      background: red;
+      background: #FFFFE0;
       border-radius: 50%;
     }
 
@@ -105,21 +109,67 @@
       }
     }
 
-    /* More hearts with various delays and positions */
-    .heart:nth-child(1) { left: 5%; animation-delay: 0s; }
-    .heart:nth-child(2) { left: 15%; animation-delay: 2s; }
-    .heart:nth-child(3) { left: 25%; animation-delay: 4s; }
-    .heart:nth-child(4) { left: 35%; animation-delay: 1s; }
-    .heart:nth-child(5) { left: 45%; animation-delay: 3s; }
-    .heart:nth-child(6) { left: 55%; animation-delay: 5s; }
-    .heart:nth-child(7) { left: 65%; animation-delay: 1.5s; }
-    .heart:nth-child(8) { left: 75%; animation-delay: 2.5s; }
-    .heart:nth-child(9) { left: 85%; animation-delay: 4.5s; }
-    .heart:nth-child(10) { left: 95%; animation-delay: 3.5s; }
+    /* 30 hearts, no delay */
+    .heart:nth-child(n) {
+      animation-delay: 0s;
+    }
+
+    /* Spread hearts across the screen */
+    .heart:nth-child(1)  { left: 2%;  animation-duration: 8s; }
+    .heart:nth-child(2)  { left: 5%;  animation-duration: 10s; }
+    .heart:nth-child(3)  { left: 8%;  animation-duration: 9s; }
+    .heart:nth-child(4)  { left: 12%; animation-duration: 11s; }
+    .heart:nth-child(5)  { left: 15%; animation-duration: 9s; }
+    .heart:nth-child(6)  { left: 18%; animation-duration: 8s; }
+    .heart:nth-child(7)  { left: 21%; animation-duration: 10s; }
+    .heart:nth-child(8)  { left: 24%; animation-duration: 9s; }
+    .heart:nth-child(9)  { left: 28%; animation-duration: 11s; }
+    .heart:nth-child(10) { left: 32%; animation-duration: 8s; }
+    .heart:nth-child(11) { left: 36%; animation-duration: 10s; }
+    .heart:nth-child(12) { left: 40%; animation-duration: 9s; }
+    .heart:nth-child(13) { left: 44%; animation-duration: 12s; }
+    .heart:nth-child(14) { left: 48%; animation-duration: 9s; }
+    .heart:nth-child(15) { left: 52%; animation-duration: 11s; }
+    .heart:nth-child(16) { left: 56%; animation-duration: 8s; }
+    .heart:nth-child(17) { left: 60%; animation-duration: 10s; }
+    .heart:nth-child(18) { left: 64%; animation-duration: 9s; }
+    .heart:nth-child(19) { left: 68%; animation-duration: 12s; }
+    .heart:nth-child(20) { left: 72%; animation-duration: 10s; }
+    .heart:nth-child(21) { left: 76%; animation-duration: 9s; }
+    .heart:nth-child(22) { left: 80%; animation-duration: 11s; }
+    .heart:nth-child(23) { left: 84%; animation-duration: 8s; }
+    .heart:nth-child(24) { left: 88%; animation-duration: 10s; }
+    .heart:nth-child(25) { left: 92%; animation-duration: 9s; }
+    .heart:nth-child(26) { left: 96%; animation-duration: 12s; }
+    .heart:nth-child(27) { left: 98%; animation-duration: 11s; }
+    .heart:nth-child(28) { left: 50%; animation-duration: 9s; }
+    .heart:nth-child(29) { left: 30%; animation-duration: 10s; }
+    .heart:nth-child(30) { left: 70%; animation-duration: 11s; }
   </style>
 </head>
 <body>
   <div class="hearts">
+    <!-- 30 hearts -->
+    <div class="heart"></div>
+    <div class="heart"></div>
+    <div class="heart"></div>
+    <div class="heart"></div>
+    <div class="heart"></div>
+    <div class="heart"></div>
+    <div class="heart"></div>
+    <div class="heart"></div>
+    <div class="heart"></div>
+    <div class="heart"></div>
+    <div class="heart"></div>
+    <div class="heart"></div>
+    <div class="heart"></div>
+    <div class="heart"></div>
+    <div class="heart"></div>
+    <div class="heart"></div>
+    <div class="heart"></div>
+    <div class="heart"></div>
+    <div class="heart"></div>
+    <div class="heart"></div>
     <div class="heart"></div>
     <div class="heart"></div>
     <div class="heart"></div>
@@ -134,7 +184,6 @@
 
   <h1>A Thousand Suns Couldn't Match a Mother's Warmth</h1>
   <p>A Mother's Day digital surprise to Ms. Dessie L. Yabo</p>
-
   <a href="next.html"><button class="button">Begin the Journey</button></a>
 </body>
 </html>
