--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     p {
       font-family: 'Helvetica Neue', sans-serif;
-      font-size: 3em;
+      font-size: 2.5em;
       font-weight: 200;
       color: #fff;
       margin-top: 20px;
@@ -120,15 +120,15 @@
     .heart:nth-child(3)  { left: 8%;  animation-duration: 9s; }
     .heart:nth-child(4)  { left: 12%; animation-duration: 11s; }
     .heart:nth-child(5)  { left: 15%; animation-duration: 9s; }
-    .heart:nth-child(6)  { left: 18%; animation-duration: 8s; }
-    .heart:nth-child(7)  { left: 21%; animation-duration: 10s; }
-    .heart:nth-child(8)  { left: 24%; animation-duration: 9s; }
-    .heart:nth-child(9)  { left: 28%; animation-duration: 11s; }
-    .heart:nth-child(10) { left: 32%; animation-duration: 8s; }
-    .heart:nth-child(11) { left: 36%; animation-duration: 10s; }
-    .heart:nth-child(12) { left: 40%; animation-duration: 9s; }
-    .heart:nth-child(13) { left: 44%; animation-duration: 12s; }
-    .heart:nth-child(14) { left: 48%; animation-duration: 9s; }
+    .heart:nth-child(6)  { right: 18%; animation-duration: 8s; }
+    .heart:nth-child(7)  { right: 21%; animation-duration: 10s; }
+    .heart:nth-child(8)  { right: 24%; animation-duration: 9s; }
+    .heart:nth-child(9)  { right: 28%; animation-duration: 11s; }
+    .heart:nth-child(10) { up: 32%; animation-duration: 8s; }
+    .heart:nth-child(11) { up: 36%; animation-duration: 10s; }
+    .heart:nth-child(12) { up: 40%; animation-duration: 9s; }
+    .heart:nth-child(13) { up: 44%; animation-duration: 12s; }
+    .heart:nth-child(14) { up: 48%; animation-duration: 9s; }
     .heart:nth-child(15) { left: 52%; animation-duration: 11s; }
     .heart:nth-child(16) { left: 56%; animation-duration: 8s; }
     .heart:nth-child(17) { left: 60%; animation-duration: 10s; }
