--- a/index.html
+++ b/index.html
@@ -1,189 +1,82 @@
-      <!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html><html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>A Thousand Suns Couldn't Match a Mother's Warmth</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Mother's Day Surprise</title>
   <style>
-    body {
-      margin: 0;
-      padding: 0;
-      background: #B22222; /* Red background */
-      font-family: 'Georgia', serif;
-      overflow: hidden;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      color: #fff;
-      position: relative;
-    }
+    @import url('https://fonts.googleapis.com/css2?family=Great+Vibes&family=Raleway:wght@300;700&display=swap');body {
+  margin: 0;
+  padding: 0;
+  background: linear-gradient(to bottom right, #b30000, #ff6666);
+  color: white;
+  font-family: 'Raleway', sans-serif;
+  overflow: hidden;
+  position: relative;
+}
 
-    h1 {
-      font-size: 7em;
-      font-weight: bold;
-      text-align: center;
-      color: #FFFFE0; /* Light yellow */
-      margin: 0 20px;
-      z-index: 1;
-    }
+.container {
+  text-align: center;
+  padding: 8vh 5vw;
+  position: relative;
+  z-index: 2;
+}
 
-    p {
-      font-family: 'Helvetica Neue', sans-serif;
-      font-size: 2.5em;
-      font-weight: 200;
-      color: #fff;
-      margin-top: 20px;
-      text-align: center;
-      z-index: 1;
-    }
+h1 {
+  font-size: 3.5em;
+  font-family: 'Great Vibes', cursive;
+  margin-bottom: 10px;
+  color: #fffacd;
+}
 
-    .button {
-      margin-top: 60px;
-      padding: 20px 50px;
-      font-size: 2em;
-      color: #B22222;
-      background-color: #FFFFE0;
-      border: none;
-      border-radius: 40px;
-      cursor: pointer;
-      transition: background 0.3s ease;
-      z-index: 1;
-    }
+p {
+  font-size: 1.3em;
+  font-weight: 300;
+  color: #ffffff;
+  margin-bottom: 40px;
+}
 
-    .button:hover {
-      background-color: #fff8b3;
-    }
+.start-btn {
+  padding: 15px 30px;
+  font-size: 1.2em;
+  border: none;
+  background-color: #fffacd;
+  color: #b30000;
+  border-radius: 30px;
+  cursor: pointer;
+  transition: 0.3s ease;
+  box-shadow: 0 0 15px rgba(255, 250, 205, 0.6);
+}
 
-    hearts {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      overflow: hidden;
-      z-index: 0;
-    }
+.start-btn:hover {
+  background-color: #ffe680;
+}
 
-    .heart {
-      position: absolute;
-      width: 40px;
-      height: 40px;
-      background: #FFFFE0; /* Light yellow hearts */
-      transform: rotate(45deg);
-      animation: float 10s infinite ease-in-out;
-      opacity: 0.7;
-    }
+.floral-border {
+  position: absolute;
+  inset: 0;
+  background-image: url('https://i.imgur.com/2O0zSjc.png'); /* Subtle floral pattern */
+  background-size: cover;
+  background-repeat: no-repeat;
+  opacity: 0.2;
+  z-index: 1;
+}
 
-    .heart::before,
-    .heart::after {
-      content: '';
-      position: absolute;
-      width: 40px;
-      height: 40px;
-      background: #FFFFE0;
-      border-radius: 50%;
-    }
+.illustration {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+  width: 150px;
+  opacity: 0.8;
+  z-index: 1;
+}
 
-    .heart::before {
-      top: -20px;
-      left: 0;
-    }
-
-    .heart::after {
-      left: -20px;
-      top: 0;
-    }
-
-    @keyframes float {
-      0% {
-        transform: translateY(100vh) rotate(45deg);
-        opacity: 0;
-      }
-      50% {
-        opacity: 1;
-      }
-      100% {
-        transform: translateY(-10vh) rotate(45deg);
-        opacity: 0;
-      }
-    }
-
-    /* 30 hearts, no delay */
-    .heart:nth-child(n) {
-      animation-delay: 0s;
-    }
-
-    /* Spread hearts across the screen */
-    .heart:nth-child(1)  { left: 2%;  animation-duration: 8s; }
-    .heart:nth-child(2)  { left: 5%;  animation-duration: 10s; }
-    .heart:nth-child(3)  { left: 8%;  animation-duration: 9s; }
-    .heart:nth-child(4)  { left: 12%; animation-duration: 11s; }
-    .heart:nth-child(5)  { left: 15%; animation-duration: 9s; }
-    .heart:nth-child(6)  { right: 18%; animation-duration: 8s; }
-    .heart:nth-child(7)  { right: 21%; animation-duration: 10s; }
-    .heart:nth-child(8)  { right: 24%; animation-duration: 9s; }
-    .heart:nth-child(9)  { right: 28%; animation-duration: 11s; }
-    .heart:nth-child(10) { up: 32%; animation-duration: 8s; }
-    .heart:nth-child(11) { up: 36%; animation-duration: 10s; }
-    .heart:nth-child(12) { up: 40%; animation-duration: 9s; }
-    .heart:nth-child(13) { up: 44%; animation-duration: 12s; }
-    .heart:nth-child(14) { up: 48%; animation-duration: 9s; }
-    .heart:nth-child(15) { left: 52%; animation-duration: 11s; }
-    .heart:nth-child(16) { left: 56%; animation-duration: 8s; }
-    .heart:nth-child(17) { left: 60%; animation-duration: 10s; }
-    .heart:nth-child(18) { left: 64%; animation-duration: 9s; }
-    .heart:nth-child(19) { left: 68%; animation-duration: 12s; }
-    .heart:nth-child(20) { left: 72%; animation-duration: 10s; }
-    .heart:nth-child(21) { left: 76%; animation-duration: 9s; }
-    .heart:nth-child(22) { left: 80%; animation-duration: 11s; }
-    .heart:nth-child(23) { left: 84%; animation-duration: 8s; }
-    .heart:nth-child(24) { left: 88%; animation-duration: 10s; }
-    .heart:nth-child(25) { left: 92%; animation-duration: 9s; }
-    .heart:nth-child(26) { left: 96%; animation-duration: 12s; }
-    .heart:nth-child(27) { left: 98%; animation-duration: 11s; }
-    .heart:nth-child(28) { left: 50%; animation-duration: 9s; }
-    .heart:nth-child(29) { left: 30%; animation-duration: 10s; }
-    .heart:nth-child(30) { left: 70%; animation-duration: 11s; }
   </style>
 </head>
 <body>
-  <div class="hearts">
-    <!-- 30 hearts -->
-    <div class="heart"></div>
-    <div class="heart"></div>
-    <div class="heart"></div>
-    <div class="heart"></div>
-    <div class="heart"></div>
-    <div class="heart"></div>
-    <div class="heart"></div>
-    <div class="heart"></div>
-    <div class="heart"></div>
-    <div class="heart"></div>
-    <div class="heart"></div>
-    <div class="heart"></div>
-    <div class="heart"></div>
-    <div class="heart"></div>
-    <div class="heart"></div>
-    <div class="heart"></div>
-    <div class="heart"></div>
-    <div class="heart"></div>
-    <div class="heart"></div>
-    <div class="heart"></div>
-    <div class="heart"></div>
-    <div class="heart"></div>
-    <div class="heart"></div>
-    <div class="heart"></div>
-    <div class="heart"></div>
-    <div class="heart"></div>
-    <div class="heart"></div>
-    <div class="heart"></div>
-    <div class="heart"></div>
-    <div class="heart"></div>
-  </div>
-
-  <h1>A Thousand Suns Couldn't Match a Mother's Warmth</h1>
-  <p>A Mother's Day digital surprise to Ms. Dessie L. Yabo</p>
-  <a href="next.html"><button class="button">Begin the Journey</button></a>
+  <div class="floral-border"></div>  <div class="container">
+    <h1>A Thousand Suns Couldn't Match a Mother's Warmth</h1>
+    <p>A Mother's Day digital surprise to Ms. Dessie L. Yabo</p>
+    <button class="start-btn" onclick="location.href='page2.html'">Begin the Journey</button>
+  </div>  <img class="illustration" src="https://i.imgur.com/v1xdkA0.png" alt="Mother and Child Illustration" />
 </body>
 </html>
