--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ p {
 .floral-border {
   position: absolute;
   inset: 0;
-  background-image: url('https://i.imgur.com/2O0zSjc.png'); /* Subtle floral pattern */
+  background-image: url(https://github.com/deniellakate/deniellakate01.github.io/blob/19bf6b67967f1fc0a9f62ebee7bfe9ffc8fd7699/IMG_20250416_085459.jpg ); /* Subtle floral pattern */
   background-size: cover;
   background-repeat: no-repeat;
   opacity: 0.2;
