--- a/page2.html
+++ b/page2.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Why This Surprise?</title>
+  <title>Happy Mother's Day, Ma!</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;700&display=swap');
 
@@ -58,10 +58,10 @@
   <div class="box">
     <h2>Why This Surprise?</h2>
     <p>
-      I may not have everything I need to give you a gift in person right now,<br>
-      but I still wanted to make this day extra special in my own little way.<br><br>
+      I may not have all the means to give you a gift in person right now,<br>
+      but I still wanted to make this day extra special in my own little way. ☺️<br><br>
       So here's something different — a digital surprise, just for you.<br>
-      Something simple, but made with so much love.
+      Something simple, but made with so much love. 💝
     </p>
     <button class="next-btn" onclick="location.href='page3.html'">Next</button>
   </div>
