--- a/page2.html
+++ b/page2.html
@@ -56,7 +56,7 @@
 </head>
 <body>
   <div class="box">
-    <h2>Why This Surprise?</h2>
+    <h2>Happy Mother's Day, Ma!</h2>
     <p>
       I may not have all the means to give you a gift in person right now,<br>
       but I still wanted to make this day extra special in my own little way. ☺️<br><br>
