--- a/page3.html
+++ b/page3.html
@@ -10,7 +10,7 @@
       margin: 0;
       padding: 40px 20px;
       font-family: 'Georgia', serif;
-      color: #000000;
+      color: white;
       line-height: 1.8;
       text-align: center;
     }
@@ -36,8 +36,8 @@
       margin-top: 40px;
       padding: 10px 25px;
       font-size: 1em;
-      background-color: #b30000;
-      color: white;
+      background-color: yellow;
+      color: black;
       border: none;
       border-radius: 8px;
       cursor: pointer;
