--- a/page4.html
+++ b/page4.html
@@ -21,13 +21,13 @@
       height: 300px;
       position: relative;
       border: 4px solid #ccc;
-      background-image: url(https://github.com/deniellakate/deniellakate01.github.io/blob/e9590182683e87e3c5b60b2ce926831edb91b8d9/IMG_20250416_085459.jpg); /* Example puzzle background */
+      background-image: url('https://i.imgur.com/kJ9TF7w.jpg'); /* Example puzzle background */
       background-size: cover;
     }
     .missing-piece {
       width: 100px;
       height: 100px;
-      background-image: url(https://github.com/deniellakate/deniellakate01.github.io/blob/e9590182683e87e3c5b60b2ce926831edb91b8d9/IMG_20250416_085459.jpg); /* Same image */
+      background-image: url('https://i.imgur.com/kJ9TF7w.jpg'); /* Same image */
       background-size: 300px 300px;
       background-position: -200px -200px;
       position: absolute;
