--- a/page4.html
+++ b/page4.html
@@ -46,14 +46,22 @@
 </head>
 <body>
 
-  <h2>A Special Message from Me to You</h2>
+  <h2>Happy Mother's Day!</h2>
   
   <video controls>
-    <source src="lv_7502344544348851517_20250511022254_022512.mp4" type="video/mp4">
+    <source src="lv_7502458432750931261_20250511030830_031721.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
 
-  <div class="caption">"Because words alone aren’t enough, I made this just for you."</div>
+  <div class="caption">"In these photos, you’ll see a smiling child…
+But behind that smile was a mother who gave everything.
+You raised me alone—with hands that worked,
+a heart that never gave up,
+and love that never asked for anything in return.
+
+Long before I knew the weight of the world,
+you were already carrying it—
+just so I could live light, happy, and free. "</div>
 
   <button class="next-btn" onclick="location.href='page5.html'">Continue</button>
 
