--- a/page6.html
+++ b/page6.html
@@ -51,8 +51,8 @@
 </head>
 <body>
 
-  <img src="https://i.imgur.com/F9SSn6H.jpg" alt="Bouquet of Flowers" />
-  <div class="message">If I could give you a thousand bouquets, I would.<br>This one is from the heart.</div>
+  <img src="f0b387aa0215ed48643747a5bea8652f.gif" alt="Bouquet of Flowers" />
+  <div class="message">If I could give you a thousand bouquets, I would.<br>But for now, please accept my digital bouquet! ☺️.</div>
 
   <button class="next-btn" onclick="location.href='page7.html'">Next</button>
 
