--- a/page7.html
+++ b/page7.html
@@ -51,7 +51,7 @@
 </head>
 <body>
 
-  <img src="https://i.imgur.com/F9SSn6H.jpg" alt="Bouquet of Flowers" />
+  <img src="new_sunflower.png" alt="Bouquet of Flowers" />
   <div class="message">Like sunflowers that follow the light, I look up to you — my guiding sunshine, always brightening my days even during my darkest hours.<br></div>
 
   <button class="next-btn" onclick="location.href='page8.html'">Next</button>
