--- a/page16.html
+++ b/page16.html
@@ -1,9 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Page 16</title>
-  <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Page 12 - From My Heart</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      background-color: #fff;
+      font-family: 'Georgia', serif;
+      color: #4b2e2e;
+      line-height: 1.7;
+      padding: 5vh 10vw;
+      text-align: justify;
+      box-sizing: border-box;
+    }
+
+    .message {
+      border: 2px solid #f4c2c2;
+      padding: 30px;
+      border-radius: 15px;
+      background-color: #fffafa;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+    }
+
+    h1 {
+      text-align: center;
+      color: #b30059;
+      margin-bottom: 25px;
+      font-family: 'Segoe UI', sans-serif;
+    }
+
+    .next-btn {
+      display: block;
+      margin: 40px auto 0;
+      padding: 12px 30px;
+      background-color: #ffb6c1;
+      color: #fff;
+      border: none;
+      border-radius: 30px;
+      font-size: 1em;
+      cursor: pointer;
+      transition: background-color 0.3s;
+    }
+
+    .next-btn:hover {
+      background-color: #e47b99;
+    }
+  </style>
 </head>
 <body>
   <div class="container">
