--- a/page15.html
+++ b/page15.html
@@ -129,7 +129,7 @@
     <p>
       And nothing—not time, not distance, not the storms of life—can ever take that away.
     </p>
-    <a class="button" href="page16.html">Next</a>
+    <button class="next-btn" onclick="location.href='page16.html'">Next</button>
   </div>
 </body>
 </html>
