--- a/page16.html
+++ b/page16.html
@@ -85,7 +85,6 @@
     <p>
       I love you. Always and in all ways, forever.
     </p>
-    <a class="button" href="page17.html">Next</a>
-  </div>
+    <button class="next-btn" onclick="location.href='page17.html'">Next</button>
 </body>
 </html> 
